--- a/src/Components/PlayVideo/PlayVideo.css
+++ b/src/Components/PlayVideo/PlayVideo.css
@@ -39,7 +39,7 @@
 }
 
 .publisher{
-    display: flrx;
+    display: flex;
     margin-top: 20px;
     align-items: center;
 }
@@ -55,12 +55,80 @@
     margin-right: 15px;
 }
 
-.publisher p{
+.publisher div p{
     color: #000;
     font-weight: 600;
     font-size: 18px;
 }
-.publisher span{
+.publisher div span{
     font-size: 13px;
+    color: #5a5a5a;
+}
+
+.publisher button{
+    align-items: flex-end;
+    background:  red;
+    color: #fff;
+    padding:  8px 30px;
+    border: 0;
+    outline: 0;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.vid-description{
+    padding-left: 55px;
+    margin: 15px 0;
+}
+
+.vid-description p{
+    font-size: 14px;
+    margin-bottom: 5px;
+    color: #5a5a5a;
+}
+.vid-description h4{
+    font-size: 14px;
+    margin-top: 15px;
+    color: #5a5a5a;
+}
+
+.comment{
+    display: flex;
+    align-items: flex-start;
+    margin: 20px, 0;
+}
+
+.comment img{
+    width: 35px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+.comment h3{
+    font-size: 14px;
+    margin-bottom: 2px;
+}
+
+.comment h3 span{
+    font-size: 12px;
+    color: #5a5a5a;
+    font-weight: 500;
+    margin-left:  8px;
+}
+
+.comment-action{
+    display: flex;
+    align-items: center;
+    margin: 8px 0;
+    font-size: 14px;
+}
+
+.comment-action img{
+    border-radius: 0;
+    width: 20px;
+    margin-right: 5px;
+}
+
+.comment-action span{
+    margin-right: 20px;
     color: #5a5a5a;
 }
